# konstanz-in-zahlen

./: .gitignore  README.md  justfile  publiccode.yml  pyproject.toml  version.json
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/workflows/: main.yml
data/arbeitsmarkt/: al_kn.csv  al_kn.md  al_quote.csv  al_quote.md  svp_alter.csv  svp_alter.md  svp_insgesamt.csv  svp_insgesamt.md
data/bauen_wohnen/: fertigstellungen.csv  fertigstellungen.md  wohnungsbestand.csv  wohnungsbestand.md
data/bevoelkerung/: README.md  altersstruktur.csv  altersstruktur.md  jugend_altenquote.csv  jugend_altenquote.md  meldestatus.csv  meldestatus.md  nach_altersgruppe.csv  nach_altersgruppe.md  nach_staatsangehoerigkeit.csv  nach_staatsangehoerigkeit.md  nach_stadtteilen.csv  nach_stadtteilen.md  natuerliche_entwicklung.csv  natuerliche_entwicklung.md  wohnbevoelkerung.csv  wohnbevoelkerung.md  zu_und_wegzug.csv  zu_und_wegzug.md
data/haushalt/: eigenbetriebe.csv  eigenbetriebe.md  haushalt.csv  haushalt.md
data/kinder_und_jugend/: README.md  ausgaben.csv  ausgaben.md  betreuungsquote.csv  betreuungsquote.md  einrichtungen_jugendarbeit.csv  einrichtungen_jugendarbeit.md  kinderbetreuung.csv  kinderbetreuung.md
data/konstanz/: klimadaten.csv  klimadaten.md  stadtgebiet.csv  stadtgebiet.md
data/kultur/: freie.csv  freie.md  kino.csv  kino.md  muenster.csv  muenster.md  museen.csv  museen.md  philharmonie.csv  philharmonie.md  philharmonie_verwaltung.csv  philharmonie_verwaltung.md  theater.csv  theater.md  theater_verwaltung.csv  (+1 more)
test/: test_csv_files.py
(+106 files in other folders)
