[project]
name = "pydantic-tables"
version = "0.1.0"
description = "Git-friendly tabular data management with Pydantic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "prettytable>=3.16.0",
    "pydantic>=2.11.5",
    "ruamel-yaml>=0.18.14",
    "typer>=0.16.0",
]

[project.scripts]
pytab = "pydantic_tables.cli:app"

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["data", "src", "test"]
typeCheckingMode = "basic"
reportMissingParameterType = "error"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUndefinedVariable = "error"
reportAssertAlwaysTrue = "error"

[tool.uv]
python-downloads = "automatic"
python-preference = "managed"
